[gd_scene load_steps=15 format=3 uid="uid://c7us6m4awk81l"]

[ext_resource type="Script" uid="uid://cc78r5gu0ah6t" path="res://Script/main_menu.gd" id="1_v3p41"]
[ext_resource type="Texture2D" uid="uid://5wgb7l7kfn25" path="res://Asset Pack/BACKGROUND (1).png" id="2_6nqpc"]
[ext_resource type="Texture2D" uid="uid://dvoub3ucpitmy" path="res://Asset Pack/PLAY BUTTON.png" id="3_qf8tx"]
[ext_resource type="Texture2D" uid="uid://hlb66toj6ug4" path="res://Asset Pack/OPTION BUTTON.png" id="4_v5kgo"]
[ext_resource type="Texture2D" uid="uid://c1if8418fstgk" path="res://Asset Pack/EXIT BUTTON.png" id="5_vbdn0"]
[ext_resource type="Texture2D" uid="uid://ternqck4px8t" path="res://Asset Pack/JUDULL 1.png" id="6_x2pvq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u7cqb"]
region_rect = Rect2(0, 0, 243, 80)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_afec1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_31qfy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qie43"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v3p41"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6nqpc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qf8tx"]
region_rect = Rect2(0, 0, 243, 80)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v5kgo"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v3p41")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6nqpc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.5
offset_top = -372.0
offset_right = 125.5
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayB" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_u7cqb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_afec1")
theme_override_styles/hover = SubResource("StyleBoxTexture_31qfy")
icon = ExtResource("3_qf8tx")

[node name="OptionB" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_qie43")
theme_override_styles/pressed = SubResource("StyleBoxTexture_qie43")
theme_override_styles/hover = SubResource("StyleBoxTexture_qie43")
icon = ExtResource("4_v5kgo")

[node name="ExitB" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_v3p41")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6nqpc")
theme_override_styles/hover = SubResource("StyleBoxTexture_qf8tx")
theme_override_styles/focus = SubResource("StyleBoxTexture_v5kgo")
icon = ExtResource("5_vbdn0")

[node name="Judul" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -328.0
offset_top = -1.0
offset_right = 330.0
offset_bottom = 375.0
grow_horizontal = 2
texture = ExtResource("6_x2pvq")

[connection signal="pressed" from="VBoxContainer/PlayB" to="." method="_on_play_b_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionB" to="." method="_on_option_b_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitB" to="." method="_on_exit_b_pressed"]
